[gd_scene load_steps=30 format=3 uid="uid://ceraupydchg8d"]

[ext_resource type="Script" path="res://scripts/scripts_letter_s/snake_game/main_game.gd" id="1_8sqgq"]
[ext_resource type="Texture2D" uid="uid://bifvnv66ckqwh" path="res://assets/images/letter_s_scene/grass.png" id="2_flam0"]
[ext_resource type="Texture2D" uid="uid://miaq041ak0hn" path="res://assets/images/letter_s_scene/Snake_spritesheet.png" id="3_thcyc"]
[ext_resource type="PackedScene" uid="uid://q08b6vrcrw7r" path="res://scenes/scenes_letter_s/snake_game/score.tscn" id="4_3lwg3"]
[ext_resource type="Texture2D" uid="uid://bk8bbvttbq4mj" path="res://assets/images/letter_s_scene/apple.png" id="4_i3uw0"]
[ext_resource type="Texture2D" uid="uid://ck75ljjojejti" path="res://assets/images/letter_s_scene/letters/s.png" id="5_whu7x"]
[ext_resource type="Texture2D" uid="uid://cxw6mmk0hrglc" path="res://assets/images/letter_s_scene/letters/u.png" id="6_xnfhs"]
[ext_resource type="Texture2D" uid="uid://ds2equyu712r" path="res://assets/images/letter_s_scene/letters/a.png" id="7_3love"]
[ext_resource type="Texture2D" uid="uid://dmkhul0hgc4t1" path="res://assets/images/letter_s_scene/letters/b.png" id="8_malc4"]
[ext_resource type="Texture2D" uid="uid://xgcp6i4r1r8w" path="res://assets/images/letter_s_scene/letters/c.png" id="9_q3pgl"]
[ext_resource type="Texture2D" uid="uid://dqj1vgg200y32" path="res://assets/images/letter_s_scene/letters/e.png" id="10_c0vux"]
[ext_resource type="Texture2D" uid="uid://cknr4lghku2yu" path="res://assets/images/letter_s_scene/letters/i.png" id="11_yce7l"]
[ext_resource type="Texture2D" uid="uid://co158cbe5jnyi" path="res://assets/images/letter_s_scene/letters/m.png" id="12_4u68o"]
[ext_resource type="Texture2D" uid="uid://cco402k4q86pn" path="res://assets/images/letter_s_scene/letters/o.png" id="13_etkvg"]
[ext_resource type="AudioStream" uid="uid://bd7g6t5chj8ag" path="res://assets/sounds/voices/sounds_letter_s/found_s.wav" id="15_qswkh"]
[ext_resource type="AudioStream" uid="uid://qrayuif4h4vk" path="res://assets/sounds/voices/sounds_letter_s/other_letter.wav" id="16_v0uvk"]
[ext_resource type="AudioStream" uid="uid://d3if0hgyhkal3" path="res://assets/sounds/voices/sounds_letter_s/game_introduction.wav" id="17_if34a"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b1tgv"]
texture = ExtResource("3_thcyc")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tu5jg"]
texture = ExtResource("4_i3uw0")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5kvgi"]
texture = ExtResource("5_whu7x")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_01qnx"]
texture = ExtResource("6_xnfhs")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x3p27"]
texture = ExtResource("7_3love")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vtc8d"]
texture = ExtResource("8_malc4")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_smjl8"]
texture = ExtResource("9_q3pgl")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cxllr"]
texture = ExtResource("10_c0vux")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6b35c"]
texture = ExtResource("11_yce7l")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h5474"]
texture = ExtResource("12_4u68o")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bitgb"]
texture = ExtResource("13_etkvg")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_c5g7a"]
tile_size = Vector2i(40, 40)
sources/0 = SubResource("TileSetAtlasSource_b1tgv")
sources/1 = SubResource("TileSetAtlasSource_tu5jg")
sources/3 = SubResource("TileSetAtlasSource_x3p27")
sources/4 = SubResource("TileSetAtlasSource_vtc8d")
sources/5 = SubResource("TileSetAtlasSource_smjl8")
sources/6 = SubResource("TileSetAtlasSource_cxllr")
sources/7 = SubResource("TileSetAtlasSource_6b35c")
sources/8 = SubResource("TileSetAtlasSource_h5474")
sources/9 = SubResource("TileSetAtlasSource_bitgb")
sources/10 = SubResource("TileSetAtlasSource_5kvgi")
sources/11 = SubResource("TileSetAtlasSource_01qnx")

[node name="MainGame" type="Node2D"]
script = ExtResource("1_8sqgq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_direction = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1153.0
offset_bottom = 648.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_flam0")
stretch_mode = 1

[node name="SnakeApple" type="TileMapLayer" parent="." groups=["ScoreGroup"]]
tile_set = SubResource("TileSet_c5g7a")

[node name="SnakeTick" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Score" parent="." instance=ExtResource("4_3lwg3")]
position = Vector2(8, 8)

[node name="FoundS" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_qswkh")

[node name="OtherLetter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_v0uvk")

[node name="Introduction" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_if34a")

[connection signal="timeout" from="SnakeTick" to="." method="_on_SnakeTick_timeout"]
